--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a href="#home">00 Home</a></li>
               <li><a href="#destination">01 Destination</a></li>
               <li><a href="#crew">02 Crew</a></li>
-              <li><a href="">03 Technology</a></li>
+              <li><a href="#technology">03 Technology</a></li>
             </ul>
           </nav>
         </div>
@@ -50,7 +50,10 @@
           </p>
         </div>
         <div class="homeCont2">
-          <div class="exploreCont">
+          <div
+            class="exploreCont"
+            onclick="window.location.href = '#destination';"
+          >
             <p class="heading4">EXPLORE</p>
           </div>
         </div>
@@ -124,6 +127,8 @@
 
     <!-- destination ends -->
 
+    <!-- crew starts -->
+
     <div class="crewWrapper" id="crew">
       <div class="crewCont width80">
         <div class="crewCont1">
@@ -136,7 +141,8 @@
             <p class="para" id="crewBio">
               Douglas Gerald Hurley is an American engineer, former Marine Corps
               pilot and former NASA astronaut. He launched into space for the
-              third time as commander of Crew Dragon Demo-2.
+              third time as commander of Crew Dragon, and served as a systems
+              flight engineer.
             </p>
           </div>
           <div class="crewButton">
@@ -168,9 +174,58 @@
       </div>
     </div>
 
-    <!-- crew starts -->
-
     <!-- crew ends -->
+
+    <!-- Tech starts -->
+
+    <div class="techWrapper" id="technology">
+      <div class="techCont">
+        <div class="techCont1">
+          <div class="crewHeading">
+            <p class="heading5 destHead"><span>03</span> SPACE LAUNCH 101</p>
+          </div>
+          <div class="techText">
+            <div class="techButton">
+              <button
+                class="techbtn heading4"
+                onclick="opentech('Launch vehicle')"
+              >
+                1
+              </button>
+              <button class="techbtn heading4" onclick="opentech('Spaceport')">
+                2
+              </button>
+              <button
+                class="techbtn heading4"
+                onclick="opentech('Space capsule')"
+              >
+                3
+              </button>
+            </div>
+            <div class="techContent">
+              <p class="navText">The terminology...</p>
+              <p class="heading3" id="techName">Launch vehicle</p>
+              <p class="para" id="techDes">
+                A launch vehicle or carrier rocket is a rocket-propelled vehicle
+                used to carry a payload from Earth's surface to space, usually
+                to Earth orbit or beyond. Our WEB-X carrier rocket is the most
+                powerful in operation. Standing 150 metres tall, it's quite an
+                awe-inspiring sight on the launch pad!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="techCont2">
+          <img
+            src="/assets/technology/image-launch-vehicle-portrait.jpg"
+            alt=""
+            id="techImage"
+          />
+        </div>
+      </div>
+    </div>
+
+    <!-- Tech ends -->
 
     <script src="main.js"></script>
   </body>
