--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navigation navText">
           <nav>
             <ul>
-              <li><a href="#home">00 Home</a></li>
+              <li class="suny active"><a href="#home">00 Home</a></li>
               <li><a href="#destination">01 Destination</a></li>
               <li><a href="#crew">02 Crew</a></li>
               <li><a href="#technology">03 Technology</a></li>
