--- a/index.html
+++ b/index.html
@@ -179,11 +179,14 @@
     <!-- Tech starts -->
 
     <div class="techWrapper" id="technology">
+      <div class="techWrap width80">
+      <div class="techHeadingCont">
+        <div class="crewHeading">
+          <p class="heading5 destHead"><span>03</span> SPACE LAUNCH 101</p>
+        </div>
+      </div>
       <div class="techCont">
         <div class="techCont1">
-          <div class="crewHeading">
-            <p class="heading5 destHead"><span>03</span> SPACE LAUNCH 101</p>
-          </div>
           <div class="techText">
             <div class="techButton">
               <button
@@ -223,6 +226,7 @@
           />
         </div>
       </div>
+    </div>
     </div>
 
     <!-- Tech ends -->
