--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
     <header>
       <div class="navCont">
         <div class="logo">
-          <img src="/assets/shared/logo.svg" alt="" />
+          <a href="#home"> <img src="/assets/shared/logo.svg" alt="" /></a>
         </div>
-        <div class="navigation navText">
-          <nav>
-            <ul>
-              <li class="suny active"><a href="#home">00 Home</a></li>
-              <li><a href="#destination">01 Destination</a></li>
-              <li><a href="#crew">02 Crew</a></li>
-              <li><a href="#technology">03 Technology</a></li>
-            </ul>
-          </nav>
+        <nav class="navigation navText">
+          <ul>
+            <li class="suny active"><a href="#home">00 Home</a></li>
+            <li><a href="#destination">01 Destination</a></li>
+            <li><a href="#crew">02 Crew</a></li>
+            <li><a href="#technology">03 Technology</a></li>
+          </ul>
+        </nav>
+        <div class="navIcon">
+          <ion-icon name="menu-outline" class="navIconMenu"></ion-icon>
+          <ion-icon name="close-outline" class="navIconMenu"></ion-icon>
         </div>
       </div>
     </header>
@@ -180,57 +182,68 @@
 
     <div class="techWrapper" id="technology">
       <div class="techWrap width80">
-      <div class="techHeadingCont">
-        <div class="crewHeading">
-          <p class="heading5 destHead"><span>03</span> SPACE LAUNCH 101</p>
-        </div>
-      </div>
-      <div class="techCont">
-        <div class="techCont1">
-          <div class="techText">
-            <div class="techButton">
-              <button
-                class="techbtn heading4"
-                onclick="opentech('Launch vehicle')"
-              >
-                1
-              </button>
-              <button class="techbtn heading4" onclick="opentech('Spaceport')">
-                2
-              </button>
-              <button
-                class="techbtn heading4"
-                onclick="opentech('Space capsule')"
-              >
-                3
-              </button>
-            </div>
-            <div class="techContent">
-              <p class="navText">The terminology...</p>
-              <p class="heading3" id="techName">Launch vehicle</p>
-              <p class="para" id="techDes">
-                A launch vehicle or carrier rocket is a rocket-propelled vehicle
-                used to carry a payload from Earth's surface to space, usually
-                to Earth orbit or beyond. Our WEB-X carrier rocket is the most
-                powerful in operation. Standing 150 metres tall, it's quite an
-                awe-inspiring sight on the launch pad!
-              </p>
-            </div>
+        <div class="techHeadingCont">
+          <div class="crewHeading">
+            <p class="heading5 destHead"><span>03</span> SPACE LAUNCH 101</p>
           </div>
         </div>
-        <div class="techCont2">
-          <img
-            src="/assets/technology/image-launch-vehicle-portrait.jpg"
-            alt=""
-            id="techImage"
-          />
+        <div class="techCont">
+          <div class="techCont1">
+            <div class="techText">
+              <div class="techButton">
+                <button
+                  class="techbtn heading4"
+                  onclick="opentech('Launch vehicle')"
+                >
+                  1
+                </button>
+                <button
+                  class="techbtn heading4"
+                  onclick="opentech('Spaceport')"
+                >
+                  2
+                </button>
+                <button
+                  class="techbtn heading4"
+                  onclick="opentech('Space capsule')"
+                >
+                  3
+                </button>
+              </div>
+              <div class="techContent">
+                <p class="navText">The terminology...</p>
+                <p class="heading3" id="techName">Launch vehicle</p>
+                <p class="para" id="techDes">
+                  A launch vehicle or carrier rocket is a rocket-propelled
+                  vehicle used to carry a payload from Earth's surface to space,
+                  usually to Earth orbit or beyond. Our WEB-X carrier rocket is
+                  the most powerful in operation. Standing 150 metres tall, it's
+                  quite an awe-inspiring sight on the launch pad!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="techCont2">
+            <img
+              src="/assets/technology/image-launch-vehicle-portrait.jpg"
+              alt=""
+              id="techImage"
+            />
+          </div>
         </div>
       </div>
-    </div>
     </div>
 
     <!-- Tech ends -->
 
     <script src="main.js"></script>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
